// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header click add button 1`] = `
<body>
  <div>
    <div
      class="header"
    >
      <section
        class="header_top container-md"
      >
        <p
          class="site_name"
        />
        <button
          class="btn button btn_addMovie"
          id=""
          type="button"
        >
          + ADD MOVIE
        </button>
      </section>
      <section
        class="header_search container-md"
      >
        <div
          class="search_title"
        >
          FIND YOUR MOVIE
        </div>
        <form>
          <div
            class="search_wraper"
          >
            <input
              autocomplete="off"
              class="input"
              id="search"
              name="search"
              placeholder="What do you want to watch?"
              type="text"
              value="qwerty"
            />
            <button
              class="btn button btn_search"
              id=""
              type="submit"
            >
              SEARCH
            </button>
          </div>
        </form>
      </section>
    </div>
  </div>
</body>
`;

exports[`Header click add button 2`] = `
<body>
  <div>
    <div
      class="header"
    >
      <section
        class="header_top container-md"
      >
        <p
          class="site_name"
        />
        <button
          class="btn button btn_addMovie"
          id=""
          type="button"
        >
          + ADD MOVIE
        </button>
        <div
          class="model_movie_popup"
        />
      </section>
      <section
        class="header_search container-md"
      >
        <div
          class="search_title"
        >
          FIND YOUR MOVIE
        </div>
        <form>
          <div
            class="search_wraper"
          >
            <input
              autocomplete="off"
              class="input"
              id="search"
              name="search"
              placeholder="What do you want to watch?"
              type="text"
              value="qwerty"
            />
            <button
              class="btn button btn_search"
              id=""
              type="submit"
            >
              SEARCH
            </button>
          </div>
        </form>
      </section>
    </div>
  </div>
</body>
`;

exports[`Header click search button 1`] = `
<body>
  <div>
    <div
      class="header"
    >
      <section
        class="header_top container-md"
      >
        <p
          class="site_name"
        />
        <button
          class="btn button btn_addMovie"
          id=""
          type="button"
        >
          + ADD MOVIE
        </button>
      </section>
      <section
        class="header_search container-md"
      >
        <div
          class="search_title"
        >
          FIND YOUR MOVIE
        </div>
        <form>
          <div
            class="search_wraper"
          >
            <input
              autocomplete="off"
              class="input"
              id="search"
              name="search"
              placeholder="What do you want to watch?"
              type="text"
              value="film"
            />
            <button
              class="btn button btn_search"
              id=""
              type="submit"
            >
              SEARCH
            </button>
          </div>
        </form>
      </section>
    </div>
  </div>
</body>
`;

exports[`Header handleChange callback 1`] = `
<body>
  <div>
    <div
      class="header"
    >
      <section
        class="header_top container-md"
      >
        <p
          class="site_name"
        />
        <button
          class="btn button btn_addMovie"
          id=""
          type="button"
        >
          + ADD MOVIE
        </button>
      </section>
      <section
        class="header_search container-md"
      >
        <div
          class="search_title"
        >
          FIND YOUR MOVIE
        </div>
        <form>
          <div
            class="search_wraper"
          >
            <input
              autocomplete="off"
              class="input"
              id="search"
              name="search"
              placeholder="What do you want to watch?"
              type="text"
              value="film"
            />
            <button
              class="btn button btn_search"
              id=""
              type="submit"
            >
              SEARCH
            </button>
          </div>
        </form>
      </section>
    </div>
  </div>
</body>
`;

exports[`Header search input value display 1`] = `
<body>
  <div>
    <div
      class="header"
    >
      <section
        class="header_top container-md"
      >
        <p
          class="site_name"
        />
        <button
          class="btn button btn_addMovie"
          id=""
          type="button"
        >
          + ADD MOVIE
        </button>
      </section>
      <section
        class="header_search container-md"
      >
        <div
          class="search_title"
        >
          FIND YOUR MOVIE
        </div>
        <form>
          <div
            class="search_wraper"
          >
            <input
              autocomplete="off"
              class="input"
              id="search"
              name="search"
              placeholder="What do you want to watch?"
              type="text"
              value="film"
            />
            <button
              class="btn button btn_search"
              id=""
              type="submit"
            >
              SEARCH
            </button>
          </div>
        </form>
      </section>
    </div>
  </div>
</body>
`;

exports[`Header snapshot renders 1`] = `
<body>
  <div>
    <div
      class="header"
    >
      <section
        class="header_top container-md"
      >
        <p
          class="site_name"
        />
        <button
          class="btn button btn_addMovie"
          id=""
          type="button"
        >
          + ADD MOVIE
        </button>
      </section>
      <section
        class="header_search container-md"
      >
        <div
          class="search_title"
        >
          FIND YOUR MOVIE
        </div>
        <form>
          <div
            class="search_wraper"
          >
            <input
              autocomplete="off"
              class="input"
              id="search"
              name="search"
              placeholder="What do you want to watch?"
              type="text"
              value=""
            />
            <button
              class="btn button btn_search"
              id=""
              type="submit"
            >
              SEARCH
            </button>
          </div>
        </form>
      </section>
    </div>
  </div>
</body>
`;

exports[`Header snapshot renders with search 1`] = `
<body>
  <div>
    <div
      class="header"
    >
      <section
        class="header_top container-md"
      >
        <p
          class="site_name"
        />
        <button
          class="btn button btn_addMovie"
          id=""
          type="button"
        >
          + ADD MOVIE
        </button>
      </section>
      <section
        class="header_search container-md"
      >
        <div
          class="search_title"
        >
          FIND YOUR MOVIE
        </div>
        <form>
          <div
            class="search_wraper"
          >
            <input
              autocomplete="off"
              class="input"
              id="search"
              name="search"
              placeholder="What do you want to watch?"
              type="text"
              value="qwerty"
            />
            <button
              class="btn button btn_search"
              id=""
              type="submit"
            >
              SEARCH
            </button>
          </div>
        </form>
      </section>
    </div>
  </div>
</body>
`;
